--- a/calculo_estatistica_notas_alunos.ipynb
+++ b/calculo_estatistica_notas_alunos.ipynb
@@ -8,9 +8,9 @@
     "Faça um Programa utilizando a linguagem Python que solicite ao usuário de cada aluno uma única nota (são 20 alunos) e as armazene em uma lista.\n",
     "Calcule e mostre:\n",
     "\n",
-    "a) A média aritmética das notas;\n",
-    "b) A variância das notas;\n",
-    "c) O desvio padrão."
+    "- a. A média aritmética das notas;\n",
+    "- b. A variância das notas;\n",
+    "- c. O desvio padrão."
    ]
   },
   {
