--- a/calculo_estatistica_notas_alunos.ipynb
+++ b/calculo_estatistica_notas_alunos.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### **Resumo estatístico - notas | alunos**\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Sabe-se que as notas dos alunos de uma Escola estão no intervalo de 0 a 10 e a Escola tem como objetivo realizar uma análise estatística sobre essas notas.\n",
+    "\n",
     "Faça um Programa utilizando a linguagem Python que solicite ao usuário de cada aluno uma única nota (são 20 alunos) e as armazene em uma lista.\n",
     "Calcule e mostre:\n",
     "\n",
@@ -15,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,10 +33,10 @@
      "text": [
       "ESTATÍSTICAS [notas | alunos]\n",
       "===============================\n",
-      "Notas: [7.35, 8.39, 9.47, 9.99]\n",
-      "Média: 8.8\n",
-      "Desvio-padrão: 1.017\n",
-      "Variância: 1.034\n"
+      "Notas: [8.0, 9.5, 5.0]\n",
+      "Média: 7.5\n",
+      "Variância: 3.5\n",
+      "Desvio-padrão: 1.87\n"
      ]
     }
    ],
@@ -104,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.11"
   },
   "orig_nbformat": 4
  },
